--- a/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
@@ -41,8 +41,8 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="매일매일 똑같은 노래만 듣는건 지겨우니까! 새로운 노래를 플레이리스트에 추가해보자" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHc-vq-9d4">
                                 <rect key="frame" x="23" y="60" width="308" height="34"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="textColor" name="Black1Text"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" name="Grey1"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typeHwithColor" translatesAutoresizingMaskIntoConstraints="NO" id="8xM-Ca-p4y">
@@ -150,6 +150,9 @@
         <image name="typeHwithColor" width="76" height="76"/>
         <namedColor name="Black1Text">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Grey1">
+            <color red="0.29399999976158142" green="0.29399999976158142" blue="0.29399999976158142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="OrangeThemeBubble">
             <color red="1" green="0.82400000095367432" blue="0.70599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
