[#399, #295] 온보딩 뷰 - 로드맵, 챌린지 로드맵 뷰 통신 연결
### Description
- 온보딩 로드맵 뷰
- 온보딩 3 뷰컨에서 section header view -> table header view로 변경
- 챌린지 로드맵 뷰 통신 연결

![image](https://user-images.githubusercontent.com/28949235/137621981-f0f6d8fd-542b-45ca-ac69-061729187a75.png)

셀 구조와 메서드, 모델등이 바뀌어서 부득이하게 같이 작업 후 PR 올립니다 ㅠ_ㅠ,,!!

### 이슈사항
윤서가 뷰를 section header view로 해놔서  table header view로 바꿨는데,
![image](https://user-images.githubusercontent.com/28949235/137621933-9529fb4a-0084-4405-8c76-2f9c2747e668.png)
요런 콘솔 에러가 뜹니다 ㅠ_ㅠ 근데 제가 작업한 부분에는 24라는게 없어서...
혹시 뭔지 알면 고쳐주시술....?s2

### Related Issue
Resolve #399
Resolve #295

--- a/Mohaeng/Mohaeng/Sources/Views/ChallengeStampView.xib
+++ b/Mohaeng/Mohaeng/Sources/Views/ChallengeStampView.xib
@@ -171,7 +171,13 @@
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <connections>
+                <outlet property="availableBadgeLabel" destination="mSo-3o-n7F" id="ALG-BN-5qy"/>
+                <outlet property="availableHappyLabel" destination="UqL-NJ-4Mx" id="2Jf-11-jah"/>
+                <outlet property="challengeNameLabel" destination="yCh-eY-nvn" id="BwZ-EH-BnX"/>
+                <outlet property="characterImageView" destination="BV7-E8-JT9" id="QCx-hx-Roz"/>
+                <outlet property="characterLineLabel" destination="H2g-88-EEw" id="Yoo-gv-gUO"/>
                 <outlet property="characterLineView" destination="1Of-o4-vt6" id="V6R-eg-QbR"/>
+                <outlet property="dayLabel" destination="TRQ-Vn-owg" id="xDI-Yo-5Pt"/>
                 <outlet property="dayLabelView" destination="Sw0-eU-8jJ" id="u12-Vk-BR4"/>
                 <outlet property="stampBgView" destination="Tk3-Ar-b0Y" id="7jj-AU-UCH"/>
                 <outlet property="stampImageView" destination="ZCr-7b-eZA" id="8JW-le-mBr"/>
