--- a/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
@@ -42,7 +42,7 @@
                                 <rect key="frame" x="23" y="60" width="308" height="34"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" name="Black1Text"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typeHwithColor" translatesAutoresizingMaskIntoConstraints="NO" id="8xM-Ca-p4y">
